--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,20 @@
 :root {
   --white-color: #fff;
-  --iris-color: #4D5AE5;
-  --cloud-color: #F4F4FD;
-  --navy-blue-color: #2E2F42;
-  --slate-color:#434455;
-
+  --iris-color: #4d5ae5;
+  --cloud-color: #f4f4fd;
+  --navy-blue-color: #2e2f42;
+  --slate-color: #434455;
 }
 
 .body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
-  font-weight: 400;
-  font-size: 16;
-  line-height: 1,5;
   letter-spacing: 0.02em;
   background-color: var(--white-color);
+  font-size: 16px;
+
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -24,25 +24,133 @@ a {
 .list {
   list-style: none;
 }
+
+.logo {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--iris-color);
+}
+
+.logo-header {
+  color: var(--navy-blue-color);
+}
+
+.logo-footer {
+  color: var(--cloud-color);
+}
+
+.header-link {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
 .nav-link {
   color: var(--navy-blue-color);
+  font-weight: 500;
 }
 
 .contact-link {
   font-style: normal;
   color: var(--slate-color);
+  font-weight: 400;
 }
 
-.main-first-section {
+.main-section {
   background-color: var(--navy-blue-color);
   color: var(--white-color);
+  text-align: center;
+}
+
+.main-title {
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 60px;
+  letter-spacing: 0.02em;
+
+  width: 496px;
+  height: 120px;
+  text-align: center;
 }
 
 .main-button {
   background-color: var(--iris-color);
   color: var(--white-color);
+
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
   letter-spacing: 0.04em;
 
+  height: 56px;
+  width: 169px;
   border: none;
   border-radius: 4px;
+}
+
+.team-section {
+  background-color: var(--cloud-color);
+}
+
+.item-team {
+  text-align: center;
+  height: 380px;
+  width: 264px;
+  border-radius: 4px;
+
+  background-color: var(--white-color);
+  box-shadow: 0px 2px 1px 0px #2e2f4214;
+}
+
+.benefits-item {
+  text-align: left;
+  width: 264px;
+  height: 104px;
+}
+
+.section-title {
+  color: var(--navy-blue-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+
+.item-title {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: var(--navy-blue-color);
+}
+
+.item-content {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: var(--slate-color);
+}
+
+.portfolio-item {
+  border: 1px solid #e7e9fc;
+  width: 360px;
+  height: 420px;
+}
+
+.footer {
+  background-color: var(--navy-blue-color);
+}
+
+.footer-content {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: left;
+  width: 264px;
+  color: var(--cloud-color);
 }
