--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,6 @@
   font-size: 16px;
   background-color: var(--white-color);
   color: var(--slate-color);
-
-  margin: 0;
-  padding: 0;
 }
 
 a {
@@ -32,7 +29,7 @@ a {
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
-  letter-spacing: 0.03e;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 
   color: var(--iris-color);
@@ -95,8 +92,6 @@ a {
   line-height: 1.07;
   letter-spacing: 0.02em;
 
-  /* width: 496px;
-  height: 120px; */
   text-align: center;
 }
 
@@ -109,10 +104,6 @@ a {
   line-height: 1.5;
   letter-spacing: 0.04em;
 
-  /* height: 56px;
-  width: 169px;
-  border-radius: 4px; */
-  border: none;
   cursor: pointer;
 }
 
@@ -129,19 +120,12 @@ a {
 }
 
 .item-team {
-  text-align: center;
   background-color: var(--white-color);
-  /* border-radius: 4px;
-  height: 380px;
-  width: 264px;
-
-  box-shadow: 0px 2px 1px 0px #2e2f4214; */
+  text-align: center;
 }
 
 .benefits-item {
   text-align: left;
-  /* width: 264px;
-  height: 104px; */
 }
 
 .section-title {
@@ -170,12 +154,6 @@ a {
   letter-spacing: 0.02em;
 }
 
-.portfolio-item {
-  border: 1px solid #e7e9fc;
-  /* width: 360px;
-  height: 420px; */
-}
-
 .footer {
   background-color: var(--navy-blue-color);
 }
@@ -187,5 +165,4 @@ a {
   letter-spacing: 0.02em;
   text-align: left;
   color: var(--cloud-color);
-  /* width: 264px; */
 }
